feat(kit): capture/equip armor & off-hand; add /kit give and cooldown bypass
Armor + off-hand:
- /kit create now snapshots the full set (main inventory + worn armor +
  off-hand), stored as separate sections in kit.yml. On claim, armor is
  equipped into empty armor slots (occupied slots fall back to the inventory)
  and the off-hand likewise; the preview shows every item.

/kit give + bypass:
- /kit give <player> <kit> (essentials.kit.admin) delivers a kit to a player,
  ignoring permission/one-time/cooldown and without starting their cooldown.
- essentials.kit.bypass lets a player skip the one-time and cooldown gates.

KitGiver does a non-destructive fit check so nothing is lost when overflow
dropping is off. Updates KitCooldownServiceTest for the new Kit shape.